# FedRL_chess_engine

./: .gitignore  README.md  TRAINING_GUIDE.md  elo_evaluation_medium_tactical_1_iter_3_20250812_004507_20250812_005747.json  evaluate_elo.py  meanings.md  papers.txt  play_chess.py  pyproject.toml  setup_folders.sh  test_config_flow.py  train.py  verify_resignation_config.py
docs/: meanings.md
latex/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
latex/src/: abstract.tex  bibliography.bib  titlepage.tex
logs/tensorboard/medium_positional_1/: events.out.tfevents.1755421429.meguazy-pc.12678.0  events.out.tfevents.1755421501.meguazy-pc.14024.0
logs/tensorboard/medium_tactical_1/: events.out.tfevents.1754938542.meguazy-pc.155328.0  events.out.tfevents.1754946051.meguazy-pc.215066.0  events.out.tfevents.1754948413.meguazy-pc.233667.0  events.out.tfevents.1754949703.meguazy-pc.243590.0  events.out.tfevents.1754949792.meguazy-pc.244460.0  events.out.tfevents.1755192802.meguazy-pc.102542.0  events.out.tfevents.1755421432.meguazy-pc.12728.0  events.out.tfevents.1755421496.meguazy-pc.13964.0  events.out.tfevents.1755512881.PC-IoT-Lab.487267.0
src/: __init__.py
src/config/: __init__.py  model_config.py
src/core/: __init__.py  alphazero_mcts.py  alphazero_net.py  chess_engine.py  game_utils.py  mcts.py
src/data/: __init__.py
src/data/openings/: openings.py
src/experiments/: __init__.py
src/scripts/: train_individual_engines.py
src/training/: __init__.py  self_play.py  trainer.py  training_utils.py
(+9 files in other folders)
