[project]
name = "mr-wolf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.9.0.dev20250720",
    "torchaudio>=2.8.0.dev20250720",
    "torchvision>=0.24.0.dev20250720",
]


[tool.uv]
    extra-index-url = ["https://download.pytorch.org/whl/nightly/cu128"]
