[project]
name = "fedrl_engine"
version = "1.0.0"
description = "A style preserving federated learning approach to a chess engine"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chess>=1.11.2",
    "torch>=2.9.0.dev20250720",
    "torchaudio>=2.8.0.dev20250720",
    "torchvision>=0.24.0.dev20250720",
]


[tool.uv]
    extra-index-url = ["https://download.pytorch.org/whl/nightly/cu128"]
